--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 </head>
 
 <body>
-    <section class="game-area"></section>
-
+    <div class="wrapper">
+        <section class="form-section"></section>
+        <section class="game-area"></section>
+    </div>
     <script src="./scripts/cards.js"></script>
     <script src="./scripts/script.js"></script>
 </body>
